<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/sign_up_layout_name"
            android:layout_width="222dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <com.helio.myreelty.common.custom_view.FontEditText
                android:id="@+id/sign_up_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_name"
                android:inputType="text"
                android:singleLine="true"
                android:textSize="14sp"
                app:fontName="@string/roboto_medium" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/sign_up_layout_email"
            android:layout_width="222dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <com.helio.myreelty.common.custom_view.FontEditText
                android:id="@+id/sign_up_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:textSize="14sp"
                app:fontName="@string/roboto_medium" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/sign_up_layout_password"
            android:layout_width="222dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <com.helio.myreelty.common.custom_view.FontEditText
                android:id="@+id/sign_up_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textSize="14sp"/>
        </android.support.design.widget.TextInputLayout>

        <com.helio.myreelty.common.custom_view.FontButton
            android:id="@+id/bt_sign_up"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="222dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:layout_marginTop="29dp"
            android:background="@drawable/ronded_join_with_login"
            android:text="@string/join"
            android:textColor="@color/red"
            android:textSize="12sp"
            app:fontName="@string/roboto_regular" />

        <com.helio.myreelty.common.custom_view.FontTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="11dp"
            android:text="@string/or"
            android:textColor="@color/black_53"
            android:textSize="10sp"
            app:fontName="@string/roboto_medium" />

        <LinearLayout
            android:id="@+id/bt_join_with_facebook"
            android:layout_width="222dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_join_with_fasebook"
            android:orientation="horizontal"
            android:padding="8dp">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginLeft="18dp"
                android:src="@drawable/facebook_logo" />

            <com.helio.myreelty.common.custom_view.FontTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="8dp"
                android:text="@string/join_with_facebook"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:fontName="@string/roboto_regular" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:orientation="horizontal">

            <com.helio.myreelty.common.custom_view.FontTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/have_an_account"
                android:textColor="@color/black_53"
                android:textSize="10sp"
                app:fontName="@string/roboto_medium" />

            <com.helio.myreelty.common.custom_view.FontTextView
                android:id="@+id/sign_up_link_to_log_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/log_in"
                android:textColor="@color/red"
                android:textSize="10sp"
                app:fontName="@string/roboto_medium" />

        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <com.helio.myreelty.common.custom_view.FontTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/by_joining_myreelty_you_agree_to_our"
            android:textColor="@color/black_53"
            android:textSize="10sp"
            app:fontName="@string/roboto_medium" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <com.helio.myreelty.common.custom_view.FontTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/terms_of_service"
                android:textColor="@color/black_86"
                android:textSize="10sp"
                app:fontName="@string/roboto_medium" />

            <com.helio.myreelty.common.custom_view.FontTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="5.3dp"
                android:layout_marginStart="3.3dp"
                android:text="@string/and"
                android:textColor="@color/black_53"
                android:textSize="10sp"
                app:fontName="@string/roboto_medium" />

            <com.helio.myreelty.common.custom_view.FontTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/privacy_policy"
                android:textColor="@color/black_86"
                android:textSize="10sp"
                app:fontName="@string/roboto_medium" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>